hphp/test/zend/good/tests/lang/func_num_args.003.php
<?php

var_dump(func_num_args());	

?>