hphp/test/zend/bad/ext/sockets/tests/socket_set_block-wrongparams.php
<?php
socket_set_block(array());
?>